# Autonomous-Indoor-Delivery-Robot

./: .gitignore  CLAUDE.md  ONBOARDING.md  README.md  TODO.md
docs/: project_plan.md  tf_tree_phase4.gv
maps/: office_map.yaml
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: display.rviz  sim.rviz
src/robot_description/launch/: display.launch.py  sim_display.launch.py
src/robot_description/urdf/: robot.urdf.xacro
src/robot_gazebo/: CMakeLists.txt  package.xml
src/robot_gazebo/launch/: bringup.launch.py  gazebo.launch.py
src/robot_gazebo/scripts/: spawn_robot.py
src/robot_gazebo/worlds/: office.world
src/robot_localization_cfg/: CMakeLists.txt  package.xml
src/robot_localization_cfg/config/: ekf.yaml
src/robot_localization_cfg/launch/: ekf.launch.py
src/robot_nav2/: CMakeLists.txt  package.xml
src/robot_nav2/config/: nav2_params.yaml  navigation.rviz
src/robot_nav2/launch/: navigation.launch.py  navigation_bringup.launch.py
src/robot_slam/: CMakeLists.txt  package.xml
src/robot_slam/config/: amcl_params.yaml  localization.rviz  mapper_params_online_async.yaml  slam.rviz
src/robot_slam/launch/: localization.launch.py  localization_bringup.launch.py  slam.launch.py  slam_bringup.launch.py
