<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_localization_cfg</name>
  <version>0.1.0</version>
  <description>EKF sensor fusion config — fuses wheel odometry and IMU for the AMR robot</description>
  <maintainer email="viveksaisurya07@gmail.com">VivekSai07</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
